--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-0*.png
-1*.png
-2*.png
-3*.png
-4*.png
-5*.png
-6*.png
-7*.png
-8*.png
-9*.png
+0*
+1*
+2*
+3*
+4*
+5*
+6*
+7*
+8*
+9*
+temp.png
 pyxelate.py
