--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ imageio==2.33.1
 joblib==1.3.2
 lazy_loader==0.3
 llvmlite==0.42.0rc1
+natsort==8.4.0
 networkx==3.2.1
 numba==0.59.0rc1
 numpy==1.26.3
